# projects

BM-core/: .project  .springBeans  pom.xml
BM-core/configuration/: bm.properties  log4j.xml  user.properties
BM-core_v3/: pom.xml  pom.xml.boot
SpringOSGi/: .project  pom.xml
SymphonyCore/: .cproject  .ino.cpp  .project  MqttUtil.cpp  MqttUtil.h  SpiffsUtil.cpp  SpiffsUtil.h  SymphonyCore.cpp  SymphonyCore.cpp1  SymphonyCore.h  SymphonyCore.h1  SymphonyCore.ino  SymphonyDeviceCredentials.cpp  SymphonyDeviceCredentials.h  SymphonyProduct.cpp  _cproject.xml  _ino.cpp  _project.xml  mainhtml.h  mainhtml3.h
SymphonyCore v2/: CMakeLists.txt
SymphonyCore-v2/: CMakeLists.txt  platformio.ini
SymphonyCore_v2/: CMakeLists.txt  platformio.ini
SymphonyE131/: .cproject  .ino.cpp  .project  SymphonyE131.ino
SymphonyE131Tree/: .cproject  .ino.cpp  .project  SymphonyE131Tree.ino
SymphonyIR/: .cproject  .ino.cpp  .project  SymphonyIR.ino  sloeber.ino.cpp
SymphonyMotionSensor/: .cproject  .ino.cpp  .project  SymphonyMotionSensor.ino  sloeber.ino.cpp
SymphonyMotionSensor-clion/: CMakeLists.txt  platformio.ini
SymphonySocket/: .cproject  .ino.cpp  .project  SymphonySocket.ino
esp8266/: .project  CMakeLists.txt
esp8266-clion/: CMakeLists.txt  platformio.ini
esp8266/SymphonyCore/: CloudMqttUtil.cpp  CloudMqttUtil.h  MqttUtil.cpp  MqttUtil.h  PushBullet.cpp  PushBullet.h  SpiffsUtil.cpp  SpiffsUtil.h  SymphonyCore.cpp  SymphonyCore.cpp1  SymphonyCore.h  SymphonyCore.h1  SymphonyProduct.h  mainhtml2.h  mainhtml3.h
esp8266/SymphonyCore/Release/: .ino.cpp.d  SpiffsUtil.cpp.d  SymphonyCore.cpp.d  SymphonyProduct.cpp.d  arduino.ar
esp8266/SymphonyCore/data/: admin-v1.1.html  admin.html  control.css  control.html  sample.html  symphony.css  symphony.js
esp8266/SymphonyCore/readme/: load_datafile.txt
esp8266/SymphonyIR/: SymphonyIR.ino
esp8266/SymphonyMotionSensor/: SymphonyMotionSensor.ino
esp8266/SymphonySocket/: SymphonySocket.ino
mp2/: .cproject  .project  .txt  carlo.txt  hahah.txt  hehe.txt  hoho.txt  public_tweets.txt  users.txt
test-esp-clion/: CMakeLists.txt  platformio.ini
(+581 files in other folders)
